0.5.1/_sources/gallery/interaction_box_image.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/interaction_box_image.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_interaction_box_image.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_interaction_box_image.py:


Interaction box image
=====================

This example demonstrates activating 'transform' mode on the image layer.
This allows the user to manipulate the image via the interaction box
(blue box and points around the image).

.. tags:: experimental

.. GENERATED FROM PYTHON SOURCE LINES 11-21



.. image-sg:: /gallery/images/sphx_glr_interaction_box_image_001.png
   :alt: interaction box image
   :srcset: /gallery/images/sphx_glr_interaction_box_image_001.png
   :class: sphx-glr-single-img





.. code-block:: Python


    from skimage import data

    import napari

    viewer = napari.view_image(data.astronaut(), rgb=True)
    viewer.layers.selection.active.mode = 'transform'

    if __name__ == '__main__':
        napari.run()


.. _sphx_glr_download_gallery_interaction_box_image.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: interaction_box_image.ipynb <interaction_box_image.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: interaction_box_image.py <interaction_box_image.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: interaction_box_image.zip <interaction_box_image.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
